--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
 body {
   margin: 0;
+
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+background: rgba(73,155,234,1);
+background: -moz-linear-gradient(left, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 26%, rgba(73,155,234,1) 34%, rgba(73,155,234,1) 42%, rgba(32,124,229,1) 55%, rgba(32,124,229,1) 63%, rgba(32,124,229,1) 72%, rgba(32,124,229,1) 92%, rgba(32,124,229,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(73,155,234,1)), color-stop(26%, rgba(73,155,234,1)), color-stop(34%, rgba(73,155,234,1)), color-stop(42%, rgba(73,155,234,1)), color-stop(55%, rgba(32,124,229,1)), color-stop(63%, rgba(32,124,229,1)), color-stop(72%, rgba(32,124,229,1)), color-stop(92%, rgba(32,124,229,1)), color-stop(100%, rgba(32,124,229,1)));
+background: -webkit-linear-gradient(left, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 26%, rgba(73,155,234,1) 34%, rgba(73,155,234,1) 42%, rgba(32,124,229,1) 55%, rgba(32,124,229,1) 63%, rgba(32,124,229,1) 72%, rgba(32,124,229,1) 92%, rgba(32,124,229,1) 100%);
+background: -o-linear-gradient(left, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 26%, rgba(73,155,234,1) 34%, rgba(73,155,234,1) 42%, rgba(32,124,229,1) 55%, rgba(32,124,229,1) 63%, rgba(32,124,229,1) 72%, rgba(32,124,229,1) 92%, rgba(32,124,229,1) 100%);
+background: -ms-linear-gradient(left, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 26%, rgba(73,155,234,1) 34%, rgba(73,155,234,1) 42%, rgba(32,124,229,1) 55%, rgba(32,124,229,1) 63%, rgba(32,124,229,1) 72%, rgba(32,124,229,1) 92%, rgba(32,124,229,1) 100%);
+background: linear-gradient(to right, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 26%, rgba(73,155,234,1) 34%, rgba(73,155,234,1) 42%, rgba(32,124,229,1) 55%, rgba(32,124,229,1) 63%, rgba(32,124,229,1) 72%, rgba(32,124,229,1) 92%, rgba(32,124,229,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 );
+
 }
 
 code {
